// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadCognitiveCardRenderPrompt > snapshot: boundary Architect 1`] = `
"Ты собираешь итоговый документ **ÆON Cognitive Identity Map** для конкретного носителя по переданным координатам протокола и выжимкам методики. Язык ответа пользователю — **русский**, обращение на **«ты»**.

## Этика и границы

- Это **не** тест IQ, **не** клиническая диагностика, **не** предсказание. Нет «лучше / хуже» типов.
- **Не используй**: эмодзи; markdown-списки и нумерацию внутри абзацев; медицинские, юридические или мистические советы; жаргон алгоритма («mapper», «confidence», проценты, «таблица §4.1» и т.п.).
- **Не озвучивай** сырые буквы координат протокола (А/Б/М по модальности, буквы якоря) в тексте карты — переводи их в человеческие формулировки методики (способ обработки, темп, фильтр доверия).

## Жёсткий формат ответа

Верни **только** текст карты: **ровно десять разделов** подряд, с заголовками **точно** в таком виде (цифра, точка, пробел, название):

1. Координаты  
2. Когнитивный рисунок  
3. Ритм мышления  
4. Когнитивная ловушка  
5. Эпистемический фильтр  
6. Тень  
7. Парадокс мыслителя  
8. Стратегические рекомендации  
9. Точки роста  
10. Краткая формула мыслителя  

Между разделами — **одна пустая строка**. Внутри раздела — короткие абзацы прозой, без маркированных списков.

## Содержание разделов

**1. Координаты** — две–четыре строки: ядерная эпистемическая цель словами (и вторичная, если в данных есть); как ум обычно ведёт задачу (по модальности — без перечисления «М1…»); на чём держится уверенность (по доминантному якорю и при необходимости спектру Я1–Я3). Если в данных **несформированное ядро** (\`core_formation: unformed\`), честно назови фазу перехода и не приписывай одну жёсткую цель.

**2. Когнитивный рисунок** — для **каждого** типа из блока «ОПИСАНИЯ ТИПОВ» ниже: по одному короткому абзацу на **силу**, **риск без контроля**, **маркер** (диагностический признак). Используй смысл этих полей, **перефразируй своими словами**, не копируй дословно. Если типов два и в данных отмечен двойной рисунок — опиши оба равноправно, без выбора «главного».

**3. Ритм мышления** — выведи из профиля модальности (в первую очередь полярности «линейно–нелинейно» и «быстро–медленно» и блок «РАСШИФРОВКА МОДАЛЬНОСТИ»): назови тип ритма (быстрый / медленный / чередующийся); оптимальная фаза для глубокой работы; одна практическая рекомендация по расписанию или границам фокуса.

**4. Когнитивная ловушка** — одна фраза: типичный режим, в который ум склонен уходить под усталостью или давлением; затем **одна** простая корректирующая практика возврата в рабочий режим (не «выйти из ловушки навсегда», а вернуть опору). Опирайся на блок «ЛОВУШКИ»; если там пусто — формулируй мягко, без ярлыка из таблицы.

**5. Эпистемический фильтр** — главный якорь как фильтр доверия к информации; две короткие «формулы» того, что в чужих утверждениях выбивает или цепляет не так (без агрессии).

**6. Тень** — что в конфигурации выглядит подавленным или несоединённым; формулировка с уважением, не «слабость».

**7. Парадокс мыслителя** — **одна** фраза **8–12 слов**, в духе «делаю X, чтобы Y», отражающая внутреннее напряжение карты (если два типа — отрази **стык**).

**8. Стратегические рекомендации** — **три–пять** конкретных ходов (среда, расписание, форма работы, партнёрство), вытекающих из координат и расшифровки модальности. Не общие советы из воздуха.

**9. Точки роста** — одна–две зоны: интеграция вторичной цели или работа с тенью. Если ядро несформировано — добавь в конец этого раздела **одну** фразу о пользе повторного прохождения протокола через **6–12 недель** без давления.

**10. Краткая формула мыслителя** — **одно** предложение **8–12 слов**, зеркало мышления; не девиз и не миссия.

## Особые случаи

- \`core_unformed: true\` — в разделах 2, 7 и 10 допускается мягкая формулировка-кандидат, без обещания финального типа.
- \`synthetic_drawing: true\` — раздел 2 и 7 обязаны отразить **оба** типа из данных.
- Если в блоке «УВЕРЕННОСТЬ» указана неоднозначность (weak, anchor_secondary, multiple, boundary, unformed): сохраняй уважительный тон; опиши, что опирается на ответы, и где остаётся место для самопроверки — **без** чисел и без слова «уверенность».

После того как сгенерируешь карту, **не добавляй** вступлений и подписей вроде «вот твоя карта».

---

session_id: snap-architect

Координаты (JSON):
{
  "primary_goal": "Точность",
  "secondary_goal": "Возможность",
  "core_formation": "tie",
  "goal_votes": [
    "Возможность",
    "Точность",
    "Возможность",
    "Точность"
  ],
  "modality_profile": [
    "А",
    "А",
    "Б",
    "Б",
    "А"
  ],
  "anchor_letters": [
    "Б",
    "Б",
    "Б"
  ],
  "dominant_anchor_letter": "Б"
}

ОПИСАНИЯ ТИПОВ (каталог §2 методички — перефразируй в карте):
### Architect
Сила: Способность построить точную структуру, которая будет жить и работать; видение конкретного будущего объекта на этапе чертежа; ответственность за то, что построил.
Риск без контроля: Переутомление в долгих проектах; косность по отношению к изменению уже построенного; перфекционизм, отсрочивающий запуск.
Тень (типа): Страх несовершенства итогового объекта; ярость на тех, кто меняет проект «уже после согласования».
Маркер: На новую возможность реагирует не «давай попробуем», а «как это должно быть устроено, чтобы работать». Отличие от Strategist: Strategist видит траекторию; Architect — структуру.

M1 (Аналитично — холистически): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает в средах, требующих гештальт-схватывания без декомпозиции. Решение: давать себе время разбирать материал по элементам перед обсуждением целого.
  Если Б: Носитель с Б теряет ощущение задачи в слишком формализованных средах с пошаговыми инструкциями. Решение: видеть всю задачу до того, как разбивать на этапы.
  Риски при перегибе на А: Выгорание от попытки «схватить целое» без подготовленных частей.
  Риски при перегибе на Б: Потеря структуры в избыточном формализме.

M2 (Линейно — нелинейно): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А тратит силы впустую в средах с постоянным переключением контекста. Решение: защищённые блоки одной задачи.
  Если Б: Носитель с Б тоскует в средах, где требуется один-единственный путь. Решение: пространство для параллельных ветвей мышления, mind maps вместо линейных конспектов.
  Риски при перегибе на А: Истощение от многозадачности и фрагментации.
  Риски при перегибе на Б: Скука и застревание в «одном рельсе».

M3 (Конкретно — абстрактно): выбор «Б» — ближе ко второму полюсу таблицы (Б)
  Если А: Носитель с А выгорает на работе с абстрактными моделями без связи с материалом. Решение: всегда ставить рядом с принципом конкретный пример.
  Если Б: Носитель с Б теряет интерес в работе, не выходящей за уровень случаев. Решение: позволять себе формулировать общие принципы из частных задач.
  Риски при перегибе на А: Потеря опоры без примеров.
  Риски при перегибе на Б: Застревание на частностях без обобщения.

M4 (Быстро — медленно): выбор «Б» — ближе ко второму полюсу таблицы (Б)
  Если А: Носитель с А выгорает на длинных аналитических циклах, требующих постоянного замедления. Решение: дробить большую работу на короткие итерации с осязаемым результатом после каждой; заранее договариваться о сроках так, чтобы не застревать неделями в одном режиме «только углубление» без маленьких завершённых шагов.
  Если Б: Носитель с Б ломается в средах с давлением на скорость и срочность. Решение: бронировать защищённые окна без навязанной срочности и проговаривать окружению комфортный темп; по возможности снимать лишние параллельные дедлайны вместо постоянной работы «на турбо».
  Риски при перегибе на А: Решения «на инерции» без достаточной проверки.
  Риски при перегибе на Б: Замедление как способ избегания финиша.

M5 (Сходяще — расходяще): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает на этапах генерации и брейншторма. Решение: ограничивать по времени и объёму фазу расширения, затем осознанно переходить к сужению; чередовать роли или привлекать партнёра с противоположной полярностью именно на «штормовых» этапах.
  Если Б: Носитель с Б выгорает на этапах сужения и финализации. Решение: перед окончательным выбором закладывать шаг «достроить поле» — явный список альтернатив и критерии отсечения; не форсировать финиш с первого круга, пока не выдержана пауза на расширение.
  Риски при перегибе на А: Преждевременное сужение и упуск альтернатив.
  Риски при перегибе на Б: Размывание без выбора и доводки.

Ответы блока Якорь (Я1–Я3):
Я1: Логический (ключ Б)
Я2: Логический (ключ Б)
Я3: Логический (ключ Б)

Доминантный якорь по протоколу: Логический (Б). Доверие требует внутренней согласованности и отсутствия логических разрывов; противоречие в аргументации дисквалифицирует вывод.

Для перечисленных типов отдельная формулировка ловушки §5.4 не задана — опиши раздел «Когнитивная ловушка» мягко, без ярлыка из таблицы, опираясь на координаты и модальность.

Тень — режим, который носитель не признаёт в себе или подавляет. В трёхосной модели тень видна структурно.

Типичные конфигурации (выбери близкую по координатам, не цитируй дословно):
• Подавленная цель — например ядерная цель «Решение», а смысл запрещён: хроника «всё работает, но зачем».
• Конфликт модальности и цели — например цель «Возможность» при линейно-конкретной модальности: страх «нереалистичных» идей и самоторможение.
• Подавленный якорь — например доминанта логики при вытесненном соматическом: огромные затраты на игнорирование телесных сигналов о неверном решении.

Тень не «убирается»; её интегрируют (§5.3): признать как ресурс; ввести структуру обращения к подавленному; перевести в инструмент после нужной фазы.

УВЕРЕННОСТЬ И РЕЗОЛЮЦИЯ (качественно; числа не показывать пользователю):
confidence_resolution: boundary
confidence_message: Граничный тип. Твой ум работает на стыке двух эпистемических целей — это сильный, не слабый результат
synthetic_drawing: false
core_unformed: false
=== cognitive_card_render_input_v1 ===
"
`;

exports[`loadCognitiveCardRenderPrompt > snapshot: clean Theorist 1`] = `
"Ты собираешь итоговый документ **ÆON Cognitive Identity Map** для конкретного носителя по переданным координатам протокола и выжимкам методики. Язык ответа пользователю — **русский**, обращение на **«ты»**.

## Этика и границы

- Это **не** тест IQ, **не** клиническая диагностика, **не** предсказание. Нет «лучше / хуже» типов.
- **Не используй**: эмодзи; markdown-списки и нумерацию внутри абзацев; медицинские, юридические или мистические советы; жаргон алгоритма («mapper», «confidence», проценты, «таблица §4.1» и т.п.).
- **Не озвучивай** сырые буквы координат протокола (А/Б/М по модальности, буквы якоря) в тексте карты — переводи их в человеческие формулировки методики (способ обработки, темп, фильтр доверия).

## Жёсткий формат ответа

Верни **только** текст карты: **ровно десять разделов** подряд, с заголовками **точно** в таком виде (цифра, точка, пробел, название):

1. Координаты  
2. Когнитивный рисунок  
3. Ритм мышления  
4. Когнитивная ловушка  
5. Эпистемический фильтр  
6. Тень  
7. Парадокс мыслителя  
8. Стратегические рекомендации  
9. Точки роста  
10. Краткая формула мыслителя  

Между разделами — **одна пустая строка**. Внутри раздела — короткие абзацы прозой, без маркированных списков.

## Содержание разделов

**1. Координаты** — две–четыре строки: ядерная эпистемическая цель словами (и вторичная, если в данных есть); как ум обычно ведёт задачу (по модальности — без перечисления «М1…»); на чём держится уверенность (по доминантному якорю и при необходимости спектру Я1–Я3). Если в данных **несформированное ядро** (\`core_formation: unformed\`), честно назови фазу перехода и не приписывай одну жёсткую цель.

**2. Когнитивный рисунок** — для **каждого** типа из блока «ОПИСАНИЯ ТИПОВ» ниже: по одному короткому абзацу на **силу**, **риск без контроля**, **маркер** (диагностический признак). Используй смысл этих полей, **перефразируй своими словами**, не копируй дословно. Если типов два и в данных отмечен двойной рисунок — опиши оба равноправно, без выбора «главного».

**3. Ритм мышления** — выведи из профиля модальности (в первую очередь полярности «линейно–нелинейно» и «быстро–медленно» и блок «РАСШИФРОВКА МОДАЛЬНОСТИ»): назови тип ритма (быстрый / медленный / чередующийся); оптимальная фаза для глубокой работы; одна практическая рекомендация по расписанию или границам фокуса.

**4. Когнитивная ловушка** — одна фраза: типичный режим, в который ум склонен уходить под усталостью или давлением; затем **одна** простая корректирующая практика возврата в рабочий режим (не «выйти из ловушки навсегда», а вернуть опору). Опирайся на блок «ЛОВУШКИ»; если там пусто — формулируй мягко, без ярлыка из таблицы.

**5. Эпистемический фильтр** — главный якорь как фильтр доверия к информации; две короткие «формулы» того, что в чужих утверждениях выбивает или цепляет не так (без агрессии).

**6. Тень** — что в конфигурации выглядит подавленным или несоединённым; формулировка с уважением, не «слабость».

**7. Парадокс мыслителя** — **одна** фраза **8–12 слов**, в духе «делаю X, чтобы Y», отражающая внутреннее напряжение карты (если два типа — отрази **стык**).

**8. Стратегические рекомендации** — **три–пять** конкретных ходов (среда, расписание, форма работы, партнёрство), вытекающих из координат и расшифровки модальности. Не общие советы из воздуха.

**9. Точки роста** — одна–две зоны: интеграция вторичной цели или работа с тенью. Если ядро несформировано — добавь в конец этого раздела **одну** фразу о пользе повторного прохождения протокола через **6–12 недель** без давления.

**10. Краткая формула мыслителя** — **одно** предложение **8–12 слов**, зеркало мышления; не девиз и не миссия.

## Особые случаи

- \`core_unformed: true\` — в разделах 2, 7 и 10 допускается мягкая формулировка-кандидат, без обещания финального типа.
- \`synthetic_drawing: true\` — раздел 2 и 7 обязаны отразить **оба** типа из данных.
- Если в блоке «УВЕРЕННОСТЬ» указана неоднозначность (weak, anchor_secondary, multiple, boundary, unformed): сохраняй уважительный тон; опиши, что опирается на ответы, и где остаётся место для самопроверки — **без** чисел и без слова «уверенность».

После того как сгенерируешь карту, **не добавляй** вступлений и подписей вроде «вот твоя карта».

---

session_id: snap-theorist

Координаты (JSON):
{
  "primary_goal": "Понимание",
  "secondary_goal": null,
  "core_formation": "single",
  "goal_votes": [
    "Понимание",
    "Понимание",
    "Понимание",
    "Понимание"
  ],
  "modality_profile": [
    "А",
    "А",
    "Б",
    "Б",
    "А"
  ],
  "anchor_letters": [
    "Б",
    "Б",
    "Б"
  ],
  "dominant_anchor_letter": "Б"
}

ОПИСАНИЯ ТИПОВ (каталог §2 методички — перефразируй в карте):
### Theorist
Сила: Способность строить модели, объясняющие большие классы явлений; работа на уровне принципов, а не случаев; знание, выдержанное во времени.
Риск без контроля: Отрыв модели от действительности; элегантность теории как самоцель; пренебрежение исключениями, которые могли бы её опровергнуть.
Тень (типа): Страх практики, в которой модель может не сработать; гордость интеллектуальной чистотой, отгораживающая от живого опыта.
Маркер: При разборе случая первым делом ищет общий принцип. Отличие от Decoder: Theorist строит общую модель; Decoder вскрывает конкретный код.

M1 (Аналитично — холистически): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает в средах, требующих гештальт-схватывания без декомпозиции. Решение: давать себе время разбирать материал по элементам перед обсуждением целого.
  Если Б: Носитель с Б теряет ощущение задачи в слишком формализованных средах с пошаговыми инструкциями. Решение: видеть всю задачу до того, как разбивать на этапы.
  Риски при перегибе на А: Выгорание от попытки «схватить целое» без подготовленных частей.
  Риски при перегибе на Б: Потеря структуры в избыточном формализме.

M2 (Линейно — нелинейно): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А тратит силы впустую в средах с постоянным переключением контекста. Решение: защищённые блоки одной задачи.
  Если Б: Носитель с Б тоскует в средах, где требуется один-единственный путь. Решение: пространство для параллельных ветвей мышления, mind maps вместо линейных конспектов.
  Риски при перегибе на А: Истощение от многозадачности и фрагментации.
  Риски при перегибе на Б: Скука и застревание в «одном рельсе».

M3 (Конкретно — абстрактно): выбор «Б» — ближе ко второму полюсу таблицы (Б)
  Если А: Носитель с А выгорает на работе с абстрактными моделями без связи с материалом. Решение: всегда ставить рядом с принципом конкретный пример.
  Если Б: Носитель с Б теряет интерес в работе, не выходящей за уровень случаев. Решение: позволять себе формулировать общие принципы из частных задач.
  Риски при перегибе на А: Потеря опоры без примеров.
  Риски при перегибе на Б: Застревание на частностях без обобщения.

M4 (Быстро — медленно): выбор «Б» — ближе ко второму полюсу таблицы (Б)
  Если А: Носитель с А выгорает на длинных аналитических циклах, требующих постоянного замедления. Решение: дробить большую работу на короткие итерации с осязаемым результатом после каждой; заранее договариваться о сроках так, чтобы не застревать неделями в одном режиме «только углубление» без маленьких завершённых шагов.
  Если Б: Носитель с Б ломается в средах с давлением на скорость и срочность. Решение: бронировать защищённые окна без навязанной срочности и проговаривать окружению комфортный темп; по возможности снимать лишние параллельные дедлайны вместо постоянной работы «на турбо».
  Риски при перегибе на А: Решения «на инерции» без достаточной проверки.
  Риски при перегибе на Б: Замедление как способ избегания финиша.

M5 (Сходяще — расходяще): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает на этапах генерации и брейншторма. Решение: ограничивать по времени и объёму фазу расширения, затем осознанно переходить к сужению; чередовать роли или привлекать партнёра с противоположной полярностью именно на «штормовых» этапах.
  Если Б: Носитель с Б выгорает на этапах сужения и финализации. Решение: перед окончательным выбором закладывать шаг «достроить поле» — явный список альтернатив и критерии отсечения; не форсировать финиш с первого круга, пока не выдержана пауза на расширение.
  Риски при перегибе на А: Преждевременное сужение и упуск альтернатив.
  Риски при перегибе на Б: Размывание без выбора и доводки.

Ответы блока Якорь (Я1–Я3):
Я1: Логический (ключ Б)
Я2: Логический (ключ Б)
Я3: Логический (ключ Б)

Доминантный якорь по протоколу: Логический (Б). Доверие требует внутренней согласованности и отсутствия логических разрывов; противоречие в аргументации дисквалифицирует вывод.

• Theorist: Отказ принимать опровергающие случаи как валидные.

Тень — режим, который носитель не признаёт в себе или подавляет. В трёхосной модели тень видна структурно.

Типичные конфигурации (выбери близкую по координатам, не цитируй дословно):
• Подавленная цель — например ядерная цель «Решение», а смысл запрещён: хроника «всё работает, но зачем».
• Конфликт модальности и цели — например цель «Возможность» при линейно-конкретной модальности: страх «нереалистичных» идей и самоторможение.
• Подавленный якорь — например доминанта логики при вытесненном соматическом: огромные затраты на игнорирование телесных сигналов о неверном решении.

Тень не «убирается»; её интегрируют (§5.3): признать как ресурс; ввести структуру обращения к подавленному; перевести в инструмент после нужной фазы.

УВЕРЕННОСТЬ И РЕЗОЛЮЦИЯ (качественно; числа не показывать пользователю):
confidence_resolution: clean_match
confidence_message: Чёткое совпадение по всем трём осям
synthetic_drawing: false
core_unformed: false
=== cognitive_card_render_input_v1 ===
"
`;

exports[`loadCognitiveCardRenderPrompt > snapshot: synthetic drawing (multiple) 1`] = `
"Ты собираешь итоговый документ **ÆON Cognitive Identity Map** для конкретного носителя по переданным координатам протокола и выжимкам методики. Язык ответа пользователю — **русский**, обращение на **«ты»**.

## Этика и границы

- Это **не** тест IQ, **не** клиническая диагностика, **не** предсказание. Нет «лучше / хуже» типов.
- **Не используй**: эмодзи; markdown-списки и нумерацию внутри абзацев; медицинские, юридические или мистические советы; жаргон алгоритма («mapper», «confidence», проценты, «таблица §4.1» и т.п.).
- **Не озвучивай** сырые буквы координат протокола (А/Б/М по модальности, буквы якоря) в тексте карты — переводи их в человеческие формулировки методики (способ обработки, темп, фильтр доверия).

## Жёсткий формат ответа

Верни **только** текст карты: **ровно десять разделов** подряд, с заголовками **точно** в таком виде (цифра, точка, пробел, название):

1. Координаты  
2. Когнитивный рисунок  
3. Ритм мышления  
4. Когнитивная ловушка  
5. Эпистемический фильтр  
6. Тень  
7. Парадокс мыслителя  
8. Стратегические рекомендации  
9. Точки роста  
10. Краткая формула мыслителя  

Между разделами — **одна пустая строка**. Внутри раздела — короткие абзацы прозой, без маркированных списков.

## Содержание разделов

**1. Координаты** — две–четыре строки: ядерная эпистемическая цель словами (и вторичная, если в данных есть); как ум обычно ведёт задачу (по модальности — без перечисления «М1…»); на чём держится уверенность (по доминантному якорю и при необходимости спектру Я1–Я3). Если в данных **несформированное ядро** (\`core_formation: unformed\`), честно назови фазу перехода и не приписывай одну жёсткую цель.

**2. Когнитивный рисунок** — для **каждого** типа из блока «ОПИСАНИЯ ТИПОВ» ниже: по одному короткому абзацу на **силу**, **риск без контроля**, **маркер** (диагностический признак). Используй смысл этих полей, **перефразируй своими словами**, не копируй дословно. Если типов два и в данных отмечен двойной рисунок — опиши оба равноправно, без выбора «главного».

**3. Ритм мышления** — выведи из профиля модальности (в первую очередь полярности «линейно–нелинейно» и «быстро–медленно» и блок «РАСШИФРОВКА МОДАЛЬНОСТИ»): назови тип ритма (быстрый / медленный / чередующийся); оптимальная фаза для глубокой работы; одна практическая рекомендация по расписанию или границам фокуса.

**4. Когнитивная ловушка** — одна фраза: типичный режим, в который ум склонен уходить под усталостью или давлением; затем **одна** простая корректирующая практика возврата в рабочий режим (не «выйти из ловушки навсегда», а вернуть опору). Опирайся на блок «ЛОВУШКИ»; если там пусто — формулируй мягко, без ярлыка из таблицы.

**5. Эпистемический фильтр** — главный якорь как фильтр доверия к информации; две короткие «формулы» того, что в чужих утверждениях выбивает или цепляет не так (без агрессии).

**6. Тень** — что в конфигурации выглядит подавленным или несоединённым; формулировка с уважением, не «слабость».

**7. Парадокс мыслителя** — **одна** фраза **8–12 слов**, в духе «делаю X, чтобы Y», отражающая внутреннее напряжение карты (если два типа — отрази **стык**).

**8. Стратегические рекомендации** — **три–пять** конкретных ходов (среда, расписание, форма работы, партнёрство), вытекающих из координат и расшифровки модальности. Не общие советы из воздуха.

**9. Точки роста** — одна–две зоны: интеграция вторичной цели или работа с тенью. Если ядро несформировано — добавь в конец этого раздела **одну** фразу о пользе повторного прохождения протокола через **6–12 недель** без давления.

**10. Краткая формула мыслителя** — **одно** предложение **8–12 слов**, зеркало мышления; не девиз и не миссия.

## Особые случаи

- \`core_unformed: true\` — в разделах 2, 7 и 10 допускается мягкая формулировка-кандидат, без обещания финального типа.
- \`synthetic_drawing: true\` — раздел 2 и 7 обязаны отразить **оба** типа из данных.
- Если в блоке «УВЕРЕННОСТЬ» указана неоднозначность (weak, anchor_secondary, multiple, boundary, unformed): сохраняй уважительный тон; опиши, что опирается на ответы, и где остаётся место для самопроверки — **без** чисел и без слова «уверенность».

После того как сгенерируешь карту, **не добавляй** вступлений и подписей вроде «вот твоя карта».

---

session_id: snap-multiple

Координаты (JSON):
{
  "primary_goal": "Истина",
  "secondary_goal": "Понимание",
  "core_formation": "tie",
  "goal_votes": [
    "Истина",
    "Истина",
    "Понимание",
    "Понимание"
  ],
  "modality_profile": [
    "А",
    "А",
    "М",
    "М",
    "А"
  ],
  "anchor_letters": [
    "Б",
    "Б",
    "Б"
  ],
  "dominant_anchor_letter": "Б"
}

ОПИСАНИЯ ТИПОВ (каталог §2 методички — перефразируй в карте):
### Empiricist
Сила: Высокая разрешающая способность к различению реального и кажущегося; не двигается дальше, пока данные не поддерживают вывод; устойчивость к красивым, но непроверенным гипотезам.
Риск без контроля: Парализующий скептицизм там, где данных не хватает; обесценивание интуитивных озарений как «недостаточных»; задержка решений до полной картины, которой не будет.
Тень (типа): Страх ошибки в публичном высказывании; гордость точностью, переходящая в презрение к менее строгим.
Маркер: На сильное утверждение реагирует вопросом «откуда это известно?» раньше, чем оценкой содержания.

### Skeptic
Сила: Умение находить слабое звено в любом аргументе; иммунитет к манипуляции; неготовность принять вывод без прохождения через все альтернативы.
Риск без контроля: Бесконечная критика без своей позиции; превращение в оппонента-по-привычке; затяжное «нет всему» как замена «да чему-то».
Тень (типа): Страх ошибиться, замаскированный под высокую планку; одиночество того, кто видит швы во всём.
Маркер: Первый импульс при встрече с новой идеей — найти, где она не выдерживает. Отличие от Empiricist: Empiricist ждёт данных; Skeptic проверяет логику.

M1 (Аналитично — холистически): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает в средах, требующих гештальт-схватывания без декомпозиции. Решение: давать себе время разбирать материал по элементам перед обсуждением целого.
  Если Б: Носитель с Б теряет ощущение задачи в слишком формализованных средах с пошаговыми инструкциями. Решение: видеть всю задачу до того, как разбивать на этапы.
  Риски при перегибе на А: Выгорание от попытки «схватить целое» без подготовленных частей.
  Риски при перегибе на Б: Потеря структуры в избыточном формализме.

M2 (Линейно — нелинейно): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А тратит силы впустую в средах с постоянным переключением контекста. Решение: защищённые блоки одной задачи.
  Если Б: Носитель с Б тоскует в средах, где требуется один-единственный путь. Решение: пространство для параллельных ветвей мышления, mind maps вместо линейных конспектов.
  Риски при перегибе на А: Истощение от многозадачности и фрагментации.
  Риски при перегибе на Б: Скука и застревание в «одном рельсе».

M3 (Конкретно — абстрактно): выбор «М» — ближе к середине между полюсами (М)
  Если А: Носитель с А выгорает на работе с абстрактными моделями без связи с материалом. Решение: всегда ставить рядом с принципом конкретный пример.
  Если Б: Носитель с Б теряет интерес в работе, не выходящей за уровень случаев. Решение: позволять себе формулировать общие принципы из частных задач.
  Риски при перегибе на А: Потеря опоры без примеров.
  Риски при перегибе на Б: Застревание на частностях без обобщения.

M4 (Быстро — медленно): выбор «М» — ближе к середине между полюсами (М)
  Если А: Носитель с А выгорает на длинных аналитических циклах, требующих постоянного замедления. Решение: дробить большую работу на короткие итерации с осязаемым результатом после каждой; заранее договариваться о сроках так, чтобы не застревать неделями в одном режиме «только углубление» без маленьких завершённых шагов.
  Если Б: Носитель с Б ломается в средах с давлением на скорость и срочность. Решение: бронировать защищённые окна без навязанной срочности и проговаривать окружению комфортный темп; по возможности снимать лишние параллельные дедлайны вместо постоянной работы «на турбо».
  Риски при перегибе на А: Решения «на инерции» без достаточной проверки.
  Риски при перегибе на Б: Замедление как способ избегания финиша.

M5 (Сходяще — расходяще): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает на этапах генерации и брейншторма. Решение: ограничивать по времени и объёму фазу расширения, затем осознанно переходить к сужению; чередовать роли или привлекать партнёра с противоположной полярностью именно на «штормовых» этапах.
  Если Б: Носитель с Б выгорает на этапах сужения и финализации. Решение: перед окончательным выбором закладывать шаг «достроить поле» — явный список альтернатив и критерии отсечения; не форсировать финиш с первого круга, пока не выдержана пауза на расширение.
  Риски при перегибе на А: Преждевременное сужение и упуск альтернатив.
  Риски при перегибе на Б: Размывание без выбора и доводки.

Ответы блока Якорь (Я1–Я3):
Я1: Логический (ключ Б)
Я2: Логический (ключ Б)
Я3: Логический (ключ Б)

Доминантный якорь по протоколу: Логический (Б). Доверие требует внутренней согласованности и отсутствия логических разрывов; противоречие в аргументации дисквалифицирует вывод.

• Empiricist: Паралич в ожидании «полных данных».

Тень — режим, который носитель не признаёт в себе или подавляет. В трёхосной модели тень видна структурно.

Типичные конфигурации (выбери близкую по координатам, не цитируй дословно):
• Подавленная цель — например ядерная цель «Решение», а смысл запрещён: хроника «всё работает, но зачем».
• Конфликт модальности и цели — например цель «Возможность» при линейно-конкретной модальности: страх «нереалистичных» идей и самоторможение.
• Подавленный якорь — например доминанта логики при вытесненном соматическом: огромные затраты на игнорирование телесных сигналов о неверном решении.

Тень не «убирается»; её интегрируют (§5.3): признать как ресурс; ввести структуру обращения к подавленному; перевести в инструмент после нужной фазы.

УВЕРЕННОСТЬ И РЕЗОЛЮЦИЯ (качественно; числа не показывать пользователю):
confidence_resolution: multiple
confidence_message: Двойной рисунок: тебя точнее описывают два типа сразу
synthetic_drawing: true
core_unformed: false
=== cognitive_card_render_input_v1 ===
"
`;

exports[`loadCognitiveCardRenderPrompt > snapshot: unformed core 1`] = `
"Ты собираешь итоговый документ **ÆON Cognitive Identity Map** для конкретного носителя по переданным координатам протокола и выжимкам методики. Язык ответа пользователю — **русский**, обращение на **«ты»**.

## Этика и границы

- Это **не** тест IQ, **не** клиническая диагностика, **не** предсказание. Нет «лучше / хуже» типов.
- **Не используй**: эмодзи; markdown-списки и нумерацию внутри абзацев; медицинские, юридические или мистические советы; жаргон алгоритма («mapper», «confidence», проценты, «таблица §4.1» и т.п.).
- **Не озвучивай** сырые буквы координат протокола (А/Б/М по модальности, буквы якоря) в тексте карты — переводи их в человеческие формулировки методики (способ обработки, темп, фильтр доверия).

## Жёсткий формат ответа

Верни **только** текст карты: **ровно десять разделов** подряд, с заголовками **точно** в таком виде (цифра, точка, пробел, название):

1. Координаты  
2. Когнитивный рисунок  
3. Ритм мышления  
4. Когнитивная ловушка  
5. Эпистемический фильтр  
6. Тень  
7. Парадокс мыслителя  
8. Стратегические рекомендации  
9. Точки роста  
10. Краткая формула мыслителя  

Между разделами — **одна пустая строка**. Внутри раздела — короткие абзацы прозой, без маркированных списков.

## Содержание разделов

**1. Координаты** — две–четыре строки: ядерная эпистемическая цель словами (и вторичная, если в данных есть); как ум обычно ведёт задачу (по модальности — без перечисления «М1…»); на чём держится уверенность (по доминантному якорю и при необходимости спектру Я1–Я3). Если в данных **несформированное ядро** (\`core_formation: unformed\`), честно назови фазу перехода и не приписывай одну жёсткую цель.

**2. Когнитивный рисунок** — для **каждого** типа из блока «ОПИСАНИЯ ТИПОВ» ниже: по одному короткому абзацу на **силу**, **риск без контроля**, **маркер** (диагностический признак). Используй смысл этих полей, **перефразируй своими словами**, не копируй дословно. Если типов два и в данных отмечен двойной рисунок — опиши оба равноправно, без выбора «главного».

**3. Ритм мышления** — выведи из профиля модальности (в первую очередь полярности «линейно–нелинейно» и «быстро–медленно» и блок «РАСШИФРОВКА МОДАЛЬНОСТИ»): назови тип ритма (быстрый / медленный / чередующийся); оптимальная фаза для глубокой работы; одна практическая рекомендация по расписанию или границам фокуса.

**4. Когнитивная ловушка** — одна фраза: типичный режим, в который ум склонен уходить под усталостью или давлением; затем **одна** простая корректирующая практика возврата в рабочий режим (не «выйти из ловушки навсегда», а вернуть опору). Опирайся на блок «ЛОВУШКИ»; если там пусто — формулируй мягко, без ярлыка из таблицы.

**5. Эпистемический фильтр** — главный якорь как фильтр доверия к информации; две короткие «формулы» того, что в чужих утверждениях выбивает или цепляет не так (без агрессии).

**6. Тень** — что в конфигурации выглядит подавленным или несоединённым; формулировка с уважением, не «слабость».

**7. Парадокс мыслителя** — **одна** фраза **8–12 слов**, в духе «делаю X, чтобы Y», отражающая внутреннее напряжение карты (если два типа — отрази **стык**).

**8. Стратегические рекомендации** — **три–пять** конкретных ходов (среда, расписание, форма работы, партнёрство), вытекающих из координат и расшифровки модальности. Не общие советы из воздуха.

**9. Точки роста** — одна–две зоны: интеграция вторичной цели или работа с тенью. Если ядро несформировано — добавь в конец этого раздела **одну** фразу о пользе повторного прохождения протокола через **6–12 недель** без давления.

**10. Краткая формула мыслителя** — **одно** предложение **8–12 слов**, зеркало мышления; не девиз и не миссия.

## Особые случаи

- \`core_unformed: true\` — в разделах 2, 7 и 10 допускается мягкая формулировка-кандидат, без обещания финального типа.
- \`synthetic_drawing: true\` — раздел 2 и 7 обязаны отразить **оба** типа из данных.
- Если в блоке «УВЕРЕННОСТЬ» указана неоднозначность (weak, anchor_secondary, multiple, boundary, unformed): сохраняй уважительный тон; опиши, что опирается на ответы, и где остаётся место для самопроверки — **без** чисел и без слова «уверенность».

После того как сгенерируешь карту, **не добавляй** вступлений и подписей вроде «вот твоя карта».

---

session_id: snap-unformed

Координаты (JSON):
{
  "primary_goal": null,
  "secondary_goal": null,
  "core_formation": "unformed",
  "goal_votes": [
    "Истина",
    "Понимание",
    "Ясность",
    "Решение"
  ],
  "modality_profile": [
    "А",
    "А",
    "А",
    "М",
    "А"
  ],
  "anchor_letters": [
    "Б",
    "Б",
    "Б"
  ],
  "dominant_anchor_letter": "Б"
}

ОПИСАНИЯ ТИПОВ (каталог §2 методички — перефразируй в карте):
### Empiricist
Сила: Высокая разрешающая способность к различению реального и кажущегося; не двигается дальше, пока данные не поддерживают вывод; устойчивость к красивым, но непроверенным гипотезам.
Риск без контроля: Парализующий скептицизм там, где данных не хватает; обесценивание интуитивных озарений как «недостаточных»; задержка решений до полной картины, которой не будет.
Тень (типа): Страх ошибки в публичном высказывании; гордость точностью, переходящая в презрение к менее строгим.
Маркер: На сильное утверждение реагирует вопросом «откуда это известно?» раньше, чем оценкой содержания.

M1 (Аналитично — холистически): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает в средах, требующих гештальт-схватывания без декомпозиции. Решение: давать себе время разбирать материал по элементам перед обсуждением целого.
  Если Б: Носитель с Б теряет ощущение задачи в слишком формализованных средах с пошаговыми инструкциями. Решение: видеть всю задачу до того, как разбивать на этапы.
  Риски при перегибе на А: Выгорание от попытки «схватить целое» без подготовленных частей.
  Риски при перегибе на Б: Потеря структуры в избыточном формализме.

M2 (Линейно — нелинейно): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А тратит силы впустую в средах с постоянным переключением контекста. Решение: защищённые блоки одной задачи.
  Если Б: Носитель с Б тоскует в средах, где требуется один-единственный путь. Решение: пространство для параллельных ветвей мышления, mind maps вместо линейных конспектов.
  Риски при перегибе на А: Истощение от многозадачности и фрагментации.
  Риски при перегибе на Б: Скука и застревание в «одном рельсе».

M3 (Конкретно — абстрактно): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает на работе с абстрактными моделями без связи с материалом. Решение: всегда ставить рядом с принципом конкретный пример.
  Если Б: Носитель с Б теряет интерес в работе, не выходящей за уровень случаев. Решение: позволять себе формулировать общие принципы из частных задач.
  Риски при перегибе на А: Потеря опоры без примеров.
  Риски при перегибе на Б: Застревание на частностях без обобщения.

M4 (Быстро — медленно): выбор «М» — ближе к середине между полюсами (М)
  Если А: Носитель с А выгорает на длинных аналитических циклах, требующих постоянного замедления. Решение: дробить большую работу на короткие итерации с осязаемым результатом после каждой; заранее договариваться о сроках так, чтобы не застревать неделями в одном режиме «только углубление» без маленьких завершённых шагов.
  Если Б: Носитель с Б ломается в средах с давлением на скорость и срочность. Решение: бронировать защищённые окна без навязанной срочности и проговаривать окружению комфортный темп; по возможности снимать лишние параллельные дедлайны вместо постоянной работы «на турбо».
  Риски при перегибе на А: Решения «на инерции» без достаточной проверки.
  Риски при перегибе на Б: Замедление как способ избегания финиша.

M5 (Сходяще — расходяще): выбор «А» — ближе к первому полюсу таблицы (А)
  Если А: Носитель с А выгорает на этапах генерации и брейншторма. Решение: ограничивать по времени и объёму фазу расширения, затем осознанно переходить к сужению; чередовать роли или привлекать партнёра с противоположной полярностью именно на «штормовых» этапах.
  Если Б: Носитель с Б выгорает на этапах сужения и финализации. Решение: перед окончательным выбором закладывать шаг «достроить поле» — явный список альтернатив и критерии отсечения; не форсировать финиш с первого круга, пока не выдержана пауза на расширение.
  Риски при перегибе на А: Преждевременное сужение и упуск альтернатив.
  Риски при перегибе на Б: Размывание без выбора и доводки.

Ответы блока Якорь (Я1–Я3):
Я1: Логический (ключ Б)
Я2: Логический (ключ Б)
Я3: Логический (ключ Б)

Доминантный якорь по протоколу: Логический (Б). Доверие требует внутренней согласованности и отсутствия логических разрывов; противоречие в аргументации дисквалифицирует вывод.

• Empiricist: Паралич в ожидании «полных данных».

Тень — режим, который носитель не признаёт в себе или подавляет. В трёхосной модели тень видна структурно.

Типичные конфигурации (выбери близкую по координатам, не цитируй дословно):
• Подавленная цель — например ядерная цель «Решение», а смысл запрещён: хроника «всё работает, но зачем».
• Конфликт модальности и цели — например цель «Возможность» при линейно-конкретной модальности: страх «нереалистичных» идей и самоторможение.
• Подавленный якорь — например доминанта логики при вытесненном соматическом: огромные затраты на игнорирование телесных сигналов о неверном решении.

Тень не «убирается»; её интегрируют (§5.3): признать как ресурс; ввести структуру обращения к подавленному; перевести в инструмент после нужной фазы.

УВЕРЕННОСТЬ И РЕЗОЛЮЦИЯ (качественно; числа не показывать пользователю):
confidence_resolution: unformed
confidence_message: Похоже, ты в фазе перехода. Рекомендуем пройти протокол повторно через 6–12 недель
synthetic_drawing: false
core_unformed: true
=== cognitive_card_render_input_v1 ===
"
`;
